# RobotikROSUebung

./: .gitignore  HowToPycharm.md  KIBeleg2.md  Solution.md  TestWebcamTransmitter.py  Todos  WebcamTransmitter.py  WindowsWebcamTransmitter.py  fix_executable_permissions.sh  make_cython.sh
BelegDokumentation/: KIBeleg2.md
BelegDokumentation/images/: Diagramm1.dia
Documentation/: KIBeleg2.md
SoundPlayer/: Main.py  play_sound.py
beleg/: CMakeLists.txt  package.xml
beleg/launch/: beleg.launch
camera_pseudo/: package.xml
camera_pseudo/src/: CameraPseudo.py
excercise_1/src/: MySubscriber.py  setup.py  test_rosSubscriberApp.py
excercise_1/src/Libs/PlatformDependentCLibs/Windows/: stdint.h
excercise_1/src/Libs/PythonLibs/Callback/: __init__.py
excercise_1/src/Libs/PythonLibs/Callback/tests/: test_callback.py
prediction/: package.xml
prediction/src/: Prediction.py  setup.py  test_rosSubscriberApp.py
prediction/src/Libs/PythonLibs/Callback/: __init__.py
prediction/src/Libs/PythonLibs/Callback/tests/: test_callback.py
prediction/src/SoundPlayer/: __init__.py
sound/: CMakeLists.txt  package.xml
sound/src/: Sound.py
sound/src/SoundPlayer/: Test.py  __init__.py
