<?xml version="1.0"?>
<package>
	<name>beleg</name>
	<version>1.0.0</version>
	<description>Beleg</description>

	<maintainer email="s0552569@htw-berlin.de">Florian Sauer</maintainer>
	<maintainer email="s0546867@htw-berlin.de">Camilo Ocampo</maintainer>
	<license>MIT</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	
	<run_depend>rospy</run_depend>
	<run_depend>roscpp</run_depend>
 
	<export></export>
</package>
